default.css
@font-face {
  font-family: 'Walsheim';
  src: url('fonts/GT-Walsheim-Pro-Trial-Regular.otf');
  font-weight: normal;
  font-style: normal;
}
@font-face {
  font-family: 'Walsheim';
  src: url('fonts/GT-Walsheim-Pro-Trial-Medium.otf');
  font-weight: 600;
  font-style: normal;
}
@font-face {
  font-family: 'Walsheim';
  src: url('fonts/GT-Walsheim-Pro-Trial-Light.otf');
  font-weight: 300;
  font-style: normal;
}

body
{
  font: 16px/1.25 'X-Walsheim', 'Gill Sans', 'Gill Sans MT', Calibri, sans-serif;
}
h1, h2, h3, h4
{
  font-weight: 600;
}

*, *:before, *:after
{
  -webkit-box-sizing: border-box;
  -moz-box-sizing: border-box;
  box-sizing: border-box;
}

.hidden
{
  display: none;
}

html, body,
h1, h2,
blockquote,
blockquote p
{
  margin: 0;
  padding: 0;
}

hgroup:after
{
  content: '';
  display: block;
  clear: both;
}

div.column
{
  padding: 0 2em;
  margin: 0 0 0 auto;
/*  margin: 0 auto;*/
}
@media (min-width: 640px) {
  div.column
  {
    max-width: 64em;
    padding-left: 12em;
  }
}

a
{
  color: rgb(17, 141, 192);
}

header
{
  background: url(../materials/photos/DianePraxis_005.jpg) 0 60% no-repeat;
  background-size: cover;
}
header div.column
{
  padding-top: 2em;
  padding-bottom: 16vmin;  /* TODO */
}

hgroup
{
  position: relative;
}
hgroup h1, 
hgroup h2
{
  font-size: 200%;
  line-height: 0.8125;
}
hgroup h1
{
  float: left;
  margin: 0 0.25em 0 0;
  text-align: right;
/*  outline: 1px solid red;*/
}
@media (min-width: 640px) {
  hgroup h1
  {
    position: absolute;
    top: 0;
    left: -6.25em;
    width: 6em;
    text-align: right;
  }
}
hgroup h2
{
  margin: 0;
  float: left;
  font-weight: 300;
}
/* TODO: Baseline fix for Safari; test on other browsers. */
hgroup h2
{
  position: relative;
  top: 1px;
}
hgroup span
{
  display: block;
}

blockquote
{
  background: rgba(17, 141, 192, 0.6);
  -webkit-backdrop-filter: blur(8px);
}
blockquote div.column
{
  padding-top: 1em;
  padding-bottom: 1em;
}
@media (min-width: 640px) {
  blockquote div.column
  {
    padding-top: 1.5em;
    padding-bottom: 1.5em;
  }
}
blockquote,
blockquote a
{
  color: rgba(255,255,255,1);
}
blockquote span,
blockquote a,
blockquote p:first-child:before,
blockquote p:last-child:after
{
  opacity: 1;
  transition: opacity 0.15s ease-out 0.1s;
}
blockquote.innerhover span,
blockquote.innerhover a:not(:hover),
blockquote.innerhover p:first-child:before,
blockquote.innerhover p:last-child:after
{
  opacity: 0.7;
  transition: opacity 0.15s ease-out;
}
blockquote a:active
{
  opacity: 0.9;
}
blockquote p
{
  position: relative;
}
@media (min-width: 640px) {
  blockquote p
  {
    font-size: 150%;
    line-height: 1.1667;
  }
}
blockquote p:first-child:before
{
  content: "“";
  display: block;
  position: absolute;
  top: 0;
  left: -1em;
  width: 1em;
  text-align: right;
}
blockquote p:last-child:after
{
  content: "”";
}

section div.column
{
  position: relative;
  padding-top: 2em;
  padding-bottom: 0;
}
section:last-of-type div.column
{
  padding-bottom: 2em;
}

@media (min-width: 640px) {
  section ul
  {
    padding-left: 0;
  }
}

